# leverageEngine

./: .gitignore  ARCHITECTURE.md  AUTO_SCRAPER_SETUP.md  BUILD_EXTENSION.sh  COMMAND_REFERENCE.md  COMPLETE_SETUP.md  DEBUG_REACT_ERROR_130.md  FIX_COUPON_CODE_ISSUE.md  FIX_EPERM_ERROR.md  FIX_JWT_ERROR.md  FIX_MODAL_STAYS_CLOSED.md  FIX_NPM_ERROR.md  FIX_REACT_ERROR.md  FIX_REACT_ERROR_130_FINAL.md  FIX_TERMINAL.md  GET_CREATOR_ID.md  HOW_TO_RUN_COMMANDS.md  LOAD_EXTENSION.md  NEXT_STEPS.md  PROJECT_SUMMARY.md  QUICK_DEBUG_STEPS.md  QUICK_FIX_EPERM.sh  QUICK_GITHUB_SETUP.sh  QUICK_START.md  QUICK_TEST_REAL_CODES.md  README.md  REAL_CODES_GUIDE.md  SETUP.md  SETUP_AUTO_SCRAPER.md  SETUP_GITHUB.md  SETUP_INSTRUCTIONS.md  SETUP_STATUS.md  SETUP_YOUTUBE_SCRAPER.md  START_DASHBOARD.sh  TESTING_GUIDE.md  TEST_EXTENSION.md  TEST_YOUTUBE_SCRAPER.md  TROUBLESHOOTING.md  WHERE_TO_PASTE_SQL.md  YOUTUBE_SCRAPER_GUIDE.md  (+4 more)
lsm-pipeline/: .gitignore  pyproject.toml
lsm-pipeline/data/: video_source_inventory.json
lsm-pipeline/data/benchmarks/: pose_estimation_evaluation.json
lsm-pipeline/data/examples/: agua.json  bien.json  casa.json  contento.json  gracias.json  manzana.json  morir.json  nosotros.json  pescado.json  sordo.json
lsm-pipeline/scripts/: benchmark_pose.py
lsm-pipeline/src/perception/: __init__.py  body_features.py  cm_classifier.py  face_features.py  hand_features.py  hand_pipeline.py  keypoint_schema.py  mediapipe_extractor.py
lsm-pipeline/src/phonology/: __init__.py  cm_inventory.py  cruz_aldrete_parser.py  enums.py
lsm-pipeline/src/schema/: __init__.py  (+2 more)
(+78 files in other folders)
